[gd_scene load_steps=54 format=3 uid="uid://cvgjonbqjpxxo"]

[ext_resource type="PackedScene" uid="uid://b013r1e0w52bq" path="res://Assets/Models/Player/guy.glb" id="1_xvyf6"]
[ext_resource type="Script" path="res://Scripts/guy.gd" id="2_vs2w2"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_pyxc1"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8e348"]
animation = &"attack_h1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f07qu"]
animation = &"attack_h1_stop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pjxio"]
animation = &"attack_l1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qmbgt"]
animation = &"attack_l1_stop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ulkt5"]
animation = &"attack_l1h1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1dq3f"]
animation = &"attack_l1h1_stop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_slqyq"]
animation = &"attack_l2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lkesi"]
animation = &"attack_l2_stop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s2j5u"]
animation = &"attack_l2h1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y4mhk"]
animation = &"attack_l2h1_stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a5lc3"]
advance_mode = 2
advance_condition = &"light"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0nsht"]
switch_mode = 2
advance_mode = 2
advance_condition = &"light"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3fxcf"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qnuff"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_adfwn"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u14ff"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4rjn6"]
advance_mode = 2
advance_condition = &"heavy"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3dbp0"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qi8ag"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mji2a"]
switch_mode = 2
advance_mode = 2
advance_condition = &"heavy"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_no2a5"]
switch_mode = 2
advance_mode = 2
advance_condition = &"heavy"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jqd5i"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o5jf6"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_aqbdm"]
switch_mode = 2
advance_mode = 2
advance_condition = &"stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vdtil"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1fku8"]
states/End/position = Vector2(1092, 128)
states/Start/position = Vector2(221, 128)
states/h1/node = SubResource("AnimationNodeAnimation_8e348")
states/h1/position = Vector2(346, 392)
states/h1_stop/node = SubResource("AnimationNodeAnimation_f07qu")
states/h1_stop/position = Vector2(852, 392)
states/l1/node = SubResource("AnimationNodeAnimation_pjxio")
states/l1/position = Vector2(346, 128)
states/l1_stop/node = SubResource("AnimationNodeAnimation_qmbgt")
states/l1_stop/position = Vector2(852, 128)
states/l1h1/node = SubResource("AnimationNodeAnimation_ulkt5")
states/l1h1/position = Vector2(520, 329)
states/l1h1_stop/node = SubResource("AnimationNodeAnimation_1dq3f")
states/l1h1_stop/position = Vector2(852, 329)
states/l2/node = SubResource("AnimationNodeAnimation_slqyq")
states/l2/position = Vector2(520, 191)
states/l2_stop/node = SubResource("AnimationNodeAnimation_lkesi")
states/l2_stop/position = Vector2(852, 191)
states/l2h1/node = SubResource("AnimationNodeAnimation_s2j5u")
states/l2h1/position = Vector2(702, 264)
states/l2h1_stop/node = SubResource("AnimationNodeAnimation_y4mhk")
states/l2h1_stop/position = Vector2(852, 264)
transitions = ["Start", "l1", SubResource("AnimationNodeStateMachineTransition_a5lc3"), "l1", "l2", SubResource("AnimationNodeStateMachineTransition_0nsht"), "l1", "l1_stop", SubResource("AnimationNodeStateMachineTransition_3fxcf"), "l2", "l2_stop", SubResource("AnimationNodeStateMachineTransition_qnuff"), "l2_stop", "End", SubResource("AnimationNodeStateMachineTransition_adfwn"), "l1_stop", "End", SubResource("AnimationNodeStateMachineTransition_u14ff"), "Start", "h1", SubResource("AnimationNodeStateMachineTransition_4rjn6"), "h1", "h1_stop", SubResource("AnimationNodeStateMachineTransition_3dbp0"), "h1_stop", "End", SubResource("AnimationNodeStateMachineTransition_qi8ag"), "l1", "l1h1", SubResource("AnimationNodeStateMachineTransition_mji2a"), "l2", "l2h1", SubResource("AnimationNodeStateMachineTransition_no2a5"), "l2h1", "l2h1_stop", SubResource("AnimationNodeStateMachineTransition_jqd5i"), "l2h1_stop", "End", SubResource("AnimationNodeStateMachineTransition_o5jf6"), "l1h1", "l1h1_stop", SubResource("AnimationNodeStateMachineTransition_aqbdm"), "l1h1_stop", "End", SubResource("AnimationNodeStateMachineTransition_vdtil")]
graph_offset = Vector2(110, 23)

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_g1koc"]
filter_enabled = true
filters = ["DRV_Armature/Skeleton3D:Hand2.L", "DRV_Armature/Skeleton3D:Hand2.L.001", "DRV_Armature/Skeleton3D:Hand2.R", "DRV_Armature/Skeleton3D:Hand2.R.001", "DRV_Armature/Skeleton3D:LowerArm.L", "DRV_Armature/Skeleton3D:LowerArm.R", "DRV_Armature/Skeleton3D:Neck", "DRV_Armature/Skeleton3D:Shoulder.L", "DRV_Armature/Skeleton3D:Shoulder.R", "DRV_Armature/Skeleton3D:Spine1", "DRV_Armature/Skeleton3D:Spine2", "DRV_Armature/Skeleton3D:Spine3", "DRV_Armature/Skeleton3D:Thumb1.L", "DRV_Armature/Skeleton3D:Thumb1.R", "DRV_Armature/Skeleton3D:Thumb2.L", "DRV_Armature/Skeleton3D:Thumb2.R", "DRV_Armature/Skeleton3D:UpperArm.L", "DRV_Armature/Skeleton3D:UpperArm.R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v6ap3"]
animation = &"flinch"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_3ik8g"]
filter_enabled = true
filters = ["DRV_Armature/Skeleton3D:Hand2.L", "DRV_Armature/Skeleton3D:Hand2.L.001", "DRV_Armature/Skeleton3D:Hand2.R", "DRV_Armature/Skeleton3D:Hand2.R.001", "DRV_Armature/Skeleton3D:LowerArm.L", "DRV_Armature/Skeleton3D:LowerArm.R", "DRV_Armature/Skeleton3D:Neck", "DRV_Armature/Skeleton3D:Shoulder.L", "DRV_Armature/Skeleton3D:Shoulder.R", "DRV_Armature/Skeleton3D:Spine1", "DRV_Armature/Skeleton3D:Spine2", "DRV_Armature/Skeleton3D:Spine3", "DRV_Armature/Skeleton3D:Thumb1.L", "DRV_Armature/Skeleton3D:Thumb1.R", "DRV_Armature/Skeleton3D:Thumb2.L", "DRV_Armature/Skeleton3D:Thumb2.R", "DRV_Armature/Skeleton3D:UpperArm.L", "DRV_Armature/Skeleton3D:UpperArm.R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1x5qt"]
animation = &"guard"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d8ugn"]
animation = &"guard_stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_r5qtq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jfc0r"]
switch_mode = 2
advance_mode = 2
advance_condition = &"guard_stop"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ohp4h"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_igl5o"]
states/guard/node = SubResource("AnimationNodeAnimation_1x5qt")
states/guard/position = Vector2(373, 100)
states/guard_stop/node = SubResource("AnimationNodeAnimation_d8ugn")
states/guard_stop/position = Vector2(588, 100)
transitions = ["Start", "guard", SubResource("AnimationNodeStateMachineTransition_r5qtq"), "guard", "guard_stop", SubResource("AnimationNodeStateMachineTransition_jfc0r"), "guard_stop", "End", SubResource("AnimationNodeStateMachineTransition_ohp4h")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1yic3"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yapci"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_4dpmf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1yic3")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_yapci")
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_jgq1e"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4up20"]
animation = &"strafe_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oxcu3"]
animation = &"strafe_forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt5p5"]
animation = &"strafe_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hefeg"]
animation = &"strafe_backward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7nxwe"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kmk8g"]
animation = &"strafe_backward_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_w50uj"]
animation = &"strafe_forward_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6ohxw"]
animation = &"strafe_backward_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2e2tf"]
animation = &"strafe_forward_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_i5q1e"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4up20")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_oxcu3")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pt5p5")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_hefeg")
blend_point_3/pos = Vector2(0, -1)
blend_point_4/node = SubResource("AnimationNodeAnimation_7nxwe")
blend_point_4/pos = Vector2(0, 0)
blend_point_5/node = SubResource("AnimationNodeAnimation_kmk8g")
blend_point_5/pos = Vector2(-0.7, -0.7)
blend_point_6/node = SubResource("AnimationNodeAnimation_w50uj")
blend_point_6/pos = Vector2(-0.7, 0.7)
blend_point_7/node = SubResource("AnimationNodeAnimation_6ohxw")
blend_point_7/pos = Vector2(0.7, -0.7)
blend_point_8/node = SubResource("AnimationNodeAnimation_2e2tf")
blend_point_8/pos = Vector2(0.7, 0.7)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_hhi6g"]
graph_offset = Vector2(-148.661, -74.9752)
nodes/Attack/node = SubResource("AnimationNodeOneShot_pyxc1")
nodes/Attack/position = Vector2(1100, 20)
nodes/AttackState/node = SubResource("AnimationNodeStateMachine_1fku8")
nodes/AttackState/position = Vector2(840, 320)
nodes/Flinch/node = SubResource("AnimationNodeOneShot_g1koc")
nodes/Flinch/position = Vector2(560, 40)
nodes/Flincher/node = SubResource("AnimationNodeAnimation_v6ap3")
nodes/Flincher/position = Vector2(400, 200)
nodes/Guard/node = SubResource("AnimationNodeOneShot_3ik8g")
nodes/Guard/position = Vector2(780, 20)
nodes/GuardState/node = SubResource("AnimationNodeStateMachine_igl5o")
nodes/GuardState/position = Vector2(580, 300)
nodes/idle-run/node = SubResource("AnimationNodeBlendSpace1D_4dpmf")
nodes/idle-run/position = Vector2(0, 20)
nodes/isStrafe/node = SubResource("AnimationNodeBlend2_jgq1e")
nodes/isStrafe/position = Vector2(280, 40)
nodes/output/position = Vector2(1320, 40)
nodes/strafe/node = SubResource("AnimationNodeBlendSpace2D_i5q1e")
nodes/strafe/position = Vector2(20, 240)
node_connections = [&"Attack", 0, &"Guard", &"Attack", 1, &"AttackState", &"Flinch", 0, &"isStrafe", &"Flinch", 1, &"Flincher", &"Guard", 0, &"Flinch", &"Guard", 1, &"GuardState", &"isStrafe", 0, &"idle-run", &"isStrafe", 1, &"strafe", &"output", 0, &"Attack"]

[node name="guy" instance=ExtResource("1_xvyf6")]
script = ExtResource("2_vs2w2")

[node name="Skeleton3D" parent="DRV_Armature" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
bones/0/position = Vector3(0.352362, 0.139776, -0.072343)
bones/1/position = Vector3(1.77527e-06, 3.94056e-06, -2.17843e-05)
bones/1/rotation = Quaternion(0.93715, 5.16767e-08, 0.245156, -0.248292)
bones/3/position = Vector3(0.261696, 1.01162, 0.660616)
bones/4/position = Vector3(0, 1.94093, 0.0886074)
bones/5/rotation = Quaternion(-0.698531, 0, 0, 0.715579)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.193044, 0.188172, -0.0914068, 0.958629)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.352861, -0.0376226, 0.142495, 0.923996)
bones/8/rotation = Quaternion(-0.181136, -0.188031, 0.089206, 0.961185)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.349704, 0.0376793, -0.14122, 0.925389)
bones/10/rotation = Quaternion(0.652258, -0.0384621, -0.0442123, 0.755729)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.0978403, -0.00248666, -0.00247665, 0.995196)
bones/13/rotation = Quaternion(0.0306667, 0.00155753, 0.00162927, 0.999527)
bones/14/rotation = Quaternion(0.0749292, 0.0637109, -0.00369651, 0.995145)
bones/14/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(-0.519051, -0.430245, -0.5232, 0.521284)
bones/17/rotation = Quaternion(-0.586744, -0.218708, -0.0146701, 0.77954)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.355949, -0.0184732, -0.525609, 0.77246)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-0.0334057, -0.0358514, 0.00577275, 0.998782)
bones/20/rotation = Quaternion(-0.107528, -0.160997, 0.101159, 0.975851)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(-0.339474, -0.181251, 0.611838, 0.691056)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(-0.138117, -0.122473, 0.620518, 0.762156)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-0.364293, -0.441053, 0.0911054, 0.815146)
bones/24/rotation = Quaternion(-0.0244352, 0.207929, 0.671685, 0.710639)
bones/25/rotation = Quaternion(-0.520671, 0.429754, 0.522965, 0.520309)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(-0.616019, 0.11082, -0.079528, 0.775832)
bones/27/rotation = Quaternion(-0.141729, 0.177109, 0.36448, 0.903161)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(-0.0334057, 0.0358514, -0.00577274, 0.998782)
bones/29/rotation = Quaternion(-0.107527, 0.160997, -0.101159, 0.975851)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(-0.339475, 0.181251, -0.611838, 0.691056)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(-0.138117, 0.122473, -0.620518, 0.762156)
bones/31/scale = Vector3(1, 1, 1)
bones/32/rotation = Quaternion(-0.364293, 0.441053, -0.0911053, 0.815146)
bones/33/rotation = Quaternion(-0.0244351, -0.207929, -0.671685, 0.710639)
bones/34/position = Vector3(-0.352362, 0.139776, -0.104221)
bones/35/position = Vector3(-1.77275e-06, 3.97442e-06, -2.17847e-05)
bones/35/rotation = Quaternion(0.93715, -5.16767e-08, -0.245156, -0.248292)
bones/37/position = Vector3(-0.261696, 1.01162, 0.660616)

[node name="CameraAttachment" type="BoneAttachment3D" parent="DRV_Armature/Skeleton3D" index="5"]
transform = Transform3D(0.992766, 0.0132882, -0.119331, -0.00231475, 0.99579, 0.0916296, 0.120046, -0.0906905, 0.988617, -0.000356154, 2.36558, 0.085868)
bone_name = "Spine3"
bone_idx = 12

[node name="RightHandAttachment" type="BoneAttachment3D" parent="DRV_Armature/Skeleton3D" index="6"]
transform = Transform3D(0.0323576, 0.966129, 0.256024, 0.504428, 0.205355, -0.838678, -0.862847, 0.156284, -0.480698, -0.65264, 1.644, 0.319209)
bone_name = "Hand2.R"
bone_idx = 30

[node name="LeftHandAttachment" type="BoneAttachment3D" parent="DRV_Armature/Skeleton3D" index="7"]
transform = Transform3D(-0.574717, -0.816585, -0.0537581, 0.171207, -0.0557398, -0.983657, 0.800243, -0.574528, 0.171839, 0.34284, 2.1317, 0.777752)
bone_name = "Hand2.L"
bone_idx = 21

[node name="LeftFootAttachment" type="BoneAttachment3D" parent="DRV_Armature/Skeleton3D" index="8"]
transform = Transform3D(0.879797, 0.121741, 0.459495, 0.459496, -0.465373, -0.756499, 0.12174, 0.876702, -0.465373, 0.352364, 0.139754, -0.0723469)
bone_name = "Ankle.L"
bone_idx = 1

[node name="RightFootAttachment" type="BoneAttachment3D" parent="DRV_Armature/Skeleton3D" index="9"]
transform = Transform3D(0.879797, -0.121741, -0.459495, -0.459496, -0.465373, -0.756499, -0.12174, 0.876702, -0.465373, -0.352364, 0.139754, -0.104225)
bone_name = "Ankle.R"
bone_idx = 35

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_hhi6g")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/active = false
parameters/Attack/internal_active = false
parameters/Attack/request = 0
parameters/AttackState/conditions/heavy = false
parameters/AttackState/conditions/light = false
parameters/AttackState/conditions/stop = false
parameters/Flinch/active = false
parameters/Flinch/internal_active = false
parameters/Flinch/request = 0
parameters/Guard/active = false
parameters/Guard/internal_active = false
parameters/Guard/request = 0
parameters/GuardState/conditions/guard_stop = false
parameters/idle-run/blend_position = 0.0
parameters/isStrafe/blend_amount = 0.0
parameters/strafe/blend_position = Vector2(-0.706378, -0.707627)

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="animation_started" from="AnimationTree" to="." method="_on_animation_tree_animation_started"]
